# clawed

./: CLAUDE.md  Cargo.toml  README.md
docs/: architecture.md  missing-features.md
packaging/: clawed.conf  clawed.manifest  clawed.spec
src/: agent.rs  config.rs  error.rs  logging.rs  main.rs  repl.rs
src/llm/: claude_cli_provider.rs  mod.rs  provider.rs  reasoning.rs  rig_adapter.rs
src/safety/: mod.rs
src/skills/: attenuation.rs  mod.rs  parser.rs  registry.rs  selector.rs
src/tools/: builtin.rs  file.rs  mod.rs  shell.rs  skill_tools.rs
