[package]
name = "clawed"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Minimal self-sufficient Rust chat agent"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# YAML parsing for SKILL.md frontmatter
serde_yml = "0.0.12"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Configuration
dotenvy = "0.15"

# Core types
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal
rustyline = { version = "17", features = ["with-file-history"] }

# Safety/pattern matching
regex = "1"

# Cryptographic hashing
sha2 = "0.10"

# Multi-provider LLM support
rig-core = "0.30"

# Filesystem paths
dirs = "6"

[features]
default = []
# Tizen TV platform: changes default data dir to /opt/usr/data/clawed
tizen = []
